--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,13 +25,13 @@ jobs:
             shell: powershell.exe
             command:  |
               Invoke-WebRequest -Uri https://www.7-zip.org/a/7z2201-x64.exe -OutFile 7zipInstall.exe
-              Start-Process -FilePath .\7zipInstall.exe -ArgumentList "/S"
+              Start-Process -FilePath .\7zipInstall.exe -ArgumentList "/S" -NoNewWindow -Wait
       - run:
             name: "Installing Visual Studio"
             shell: powershell.exe
             command:  |
               Invoke-WebRequest -Uri "https://c2rsetup.officeapps.live.com/c2r/downloadVS.aspx?sku=community&channel=Release&version=VS2022" -OutFile VSInstall.exe
-              Start-Process -FilePath .\VSInstall.exe -ArgumentList "--add Microsoft.VisualStudio.Workload.NativeDesktop Microsoft.VisualStudio.Component.VC.ATLMFC --includeRecommended --quiet --passive --norestart"
+              Start-Process -FilePath .\VSInstall.exe -ArgumentList "--add Microsoft.VisualStudio.Workload.NativeDesktop Microsoft.VisualStudio.Component.VC.ATLMFC --includeRecommended --quiet --passive --norestart" -NoNewWindow -Wait
       - run: dir
 
 
