--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       - run:
           name: "Check Python"
           shell: cmd.exe
-          command: where python && python --version && echo print('Hello from Python')>pytest.py && python pytest.py && del pytest.py
+          command: set PATH=%PATH%;C:\Python\Python310\;C:\Python\Python310\Scripts\ && where python && python --version && echo print('Hello from Python')>pytest.py && python pytest.py && del pytest.py
       - run:
             name: "Installing 7zip"
             shell: powershell.exe
