--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
             name: "Installing Visual Studio"
             shell: powershell.exe
             command:  |
-              Invoke-WebRequest -Uri "https://c2rsetup.officeapps.live.com/c2r/downloadVS.aspx?sku=community&channel=Release&version=VS2022" -OutFile VSInstall.exe
+              Invoke-WebRequest -Uri "https://aka.ms/vs/17/release/vs_community.exe" -OutFile VSInstall.exe
               Start-Process -FilePath .\VSInstall.exe -ArgumentList "modifySettings --add Microsoft.VisualStudio.Workload.NativeDesktop Microsoft.VisualStudio.Component.VC.ATLMFC --includeRecommended --quiet --passive --norestart --wait" -NoNewWindow -Wait
       - run:
             name: "Installing Windows SDK"
