--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,16 +48,14 @@ jobs:
               Invoke-WebRequest -Uri "https://go.microsoft.com/fwlink/?linkid=2164145" -OutFile WinSDKInstall.exe
               Start-Process -FilePath .\WinSDKInstall.exe -ArgumentList "/features + /q /norestart /ceip off" -NoNewWindow -Wait
       - run:
-            name: "Getting build wrapper"
-            shell: powershell.exe
-            command: |
-              Invoke-WebRequest -Uri "https://raw.githubusercontent.com/capthehacker99/ungoogled-chromium-windows/master/buildwrapper.py" -OutFile buildwrapper.py
-      - run:
           name: "Set Variables"
           shell: cmd.exe
           command: set WINDOWSSDKDIR=C:\Program Files (x86)\Windows Kits\10 && set vs2022_install=C:\Program Files\Microsoft Visual Studio\2022\Community && set GYP_MSVS_VERSION = 2022
       - run: dir
-      - run: py buildwrapper.py
+      - run:
+          name: "Build"
+          command: py build.py
+          no_output_timeout: 30m
       - run: py package.py
 
 
