--- a/flags.windows.gn
+++ b/flags.windows.gn
@@ -14,3 +14,8 @@ blink_symbol_level=0
 v8_symbol_level=0
 symbol_level=0
 skip_archive_compression=false
+dcheck_always_on=false
+enable_nacl=false
+msan_track_origins=0
+optimize_webui=true
+ndk_supports_vulkan=true
