--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,9 +48,14 @@ jobs:
               Invoke-WebRequest -Uri "https://go.microsoft.com/fwlink/?linkid=2164145" -OutFile WinSDKInstall.exe
               Start-Process -FilePath .\WinSDKInstall.exe -ArgumentList "/features + /q /norestart /ceip off" -NoNewWindow -Wait
       - run:
+            name: "Changing flags"
+            shell: powershell.exe
+            command: |
+              Invoke-WebRequest -Uri "https://raw.githubusercontent.com/capthehacker99/ungoogled-chromium-windows/master/flags.windows.gn" -OutFile flags.windows.gn
+      - run:
           name: "Set Variables"
           shell: cmd.exe
-          command: set WINDOWSSDKDIR=C:\Program Files (x86)\Windows Kits\10 && set vs2022_install=C:\Program Files\Microsoft Visual Studio\2022\Community && set GYP_MSVS_VERSION = 2022
+          command: set WINDOWSSDKDIR=C:\Program Files (x86)\Windows Kits\10 && set vs2022_install=C:\Program Files\Microsoft Visual Studio\2022\Community && set GYP_MSVS_VERSION = 2022 && setx /M PATH "%PATH%;C:\Python\Python310\;C:\Python\Python310\Scripts\"
       - run: dir
       - run:
           name: "Build"
