--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,10 @@ jobs:
       shell: 'cmd.exe' #'powershell.exe -ExecutionPolicy Bypass'
     steps:
       # Commands are run in a Windows virtual machine environment
+      - run:
+          name: "Set Variables"
+          shell: cmd.exe
+          command: set WINDOWSSDKDIR=C:\Program Files (x86)\Windows Kits\10 && set vs2022_install=C:\Program Files\Microsoft Visual Studio\2022\Community && set GYP_MSVS_VERSION = 2022 && setx /M PATH "%PATH%;C:\Python\Python310\;C:\Python\Python310\Scripts\\"
       - run: git clone --recurse-submodules https://github.com/ungoogled-software/ungoogled-chromium-windows.git .
       - run:  systeminfo
       - run:
@@ -52,10 +56,6 @@ jobs:
             shell: powershell.exe
             command: |
               Invoke-WebRequest -Uri "https://raw.githubusercontent.com/capthehacker99/ungoogled-chromium-windows/master/flags.windows.gn" -OutFile flags.windows.gn
-      - run:
-          name: "Set Variables"
-          shell: cmd.exe
-          command: set WINDOWSSDKDIR=C:\Program Files (x86)\Windows Kits\10 && set vs2022_install=C:\Program Files\Microsoft Visual Studio\2022\Community && set GYP_MSVS_VERSION = 2022 && setx /M PATH "%PATH%;C:\Python\Python310\;C:\Python\Python310\Scripts\"
       - run: dir
       - run:
           name: "Build"
