--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
       - run:
           name: "Check Python"
           shell: cmd.exe
-          command: where python && python --version && python3 --version && py --version && py3 --version && echo print('Hello from Python')>pytest.py && python pytest.py && del pytest.py
+          command: set PATH="C:\Windows\System32;C:\Windows;C:\Windows\System32\wbem;C:\Windows\System32\WindowsPowerShell\v1.0\;C:\Windows\System32\OpenSSH\;C:\Program Files\PowerShell\7\;C:\Program Files\Google\Compute Engine\sysprep;C:\PROGRA~3\CHOCOL~1\bin;C:\PROGRA~1\Git\cmd;C:\PROGRA~1\Git\mingw64\bin;C:\PROGRA~1\Git\usr\bin;C:\Program Files\Git LFS;C:\Program Files\Amazon\AWSCLIV2\;C:\Program Files\Microsoft\Web Platform Installer\;C:\Program Files\Microsoft Service Fabric\bin\Fabric\Fabric.Code;C:\Program Files\Microsoft SDKs\Service Fabric\Tools\ServiceFabricLocalClusterManager;C:\Program Files\Go\bin;C:\PROGRA~1\nodejs\;C:\ProgramData\nvm;C:\PROGRA~1\nodejs;C:\Program Files\Docker;C:\PROGRA~1\dotnet\;C:\Program Files\Microsoft SQL Server\150\Tools\Binn\;C:\Program Files\Microsoft SQL Server\Client SDK\ODBC\170\Tools\Binn\;C:\Program Files (x86)\IncrediBuild;C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\MSBuild\Current\BinC:\Python\Python310\;C:\Python\Python310\Scripts\\" && where python && python --version && python3 --version && py --version && py3 --version && echo print('Hello from Python')>pytest.py && python pytest.py && del pytest.py
       - run:
             name: "Installing 7zip"
             shell: powershell.exe
@@ -63,7 +63,7 @@ jobs:
       - run: dir
       - run:
           name: "Build"
-          command: py build.py
+          command: set WINDOWSSDKDIR=C:\Program Files (x86)\Windows Kits\10 && set vs2022_install=C:\Program Files\Microsoft Visual Studio\2022\Community && set GYP_MSVS_VERSION=2022 && echo %PATH% && set PATH="C:\Windows\System32;C:\Windows;C:\Windows\System32\wbem;C:\Windows\System32\WindowsPowerShell\v1.0\;C:\Windows\System32\OpenSSH\;C:\Program Files\PowerShell\7\;C:\Program Files\Google\Compute Engine\sysprep;C:\PROGRA~3\CHOCOL~1\bin;C:\PROGRA~1\Git\cmd;C:\PROGRA~1\Git\mingw64\bin;C:\PROGRA~1\Git\usr\bin;C:\Program Files\Git LFS;C:\Program Files\Amazon\AWSCLIV2\;C:\Program Files\Microsoft\Web Platform Installer\;C:\Program Files\Microsoft Service Fabric\bin\Fabric\Fabric.Code;C:\Program Files\Microsoft SDKs\Service Fabric\Tools\ServiceFabricLocalClusterManager;C:\Program Files\Go\bin;C:\PROGRA~1\nodejs\;C:\ProgramData\nvm;C:\PROGRA~1\nodejs;C:\Program Files\Docker;C:\PROGRA~1\dotnet\;C:\Program Files\Microsoft SQL Server\150\Tools\Binn\;C:\Program Files\Microsoft SQL Server\Client SDK\ODBC\170\Tools\Binn\;C:\Program Files (x86)\IncrediBuild;C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\MSBuild\Current\BinC:\Python\Python310\;C:\Python\Python310\Scripts\\" && py build.py
           no_output_timeout: 30m
       - run: py package.py
 
