--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   build_deploy:
-    resource_class: 'windows.medium'
+    resource_class: 'windows.large'
     machine:
       image: 'windows-server-2022-gui:current'
       shell: 'cmd.exe' #'powershell.exe -ExecutionPolicy Bypass'
