--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -8,13 +8,31 @@ jobs:
     runs-on: windows-2022
     steps:
       # Commands are run in a Windows virtual machine environment $ENV:PATH;
+      #- id: Get_Python
+      #  name: "Installing Python 3.10.6"
+      #  shell: powershell
+      #  run:  |
+      #      Invoke-WebRequest -Uri https://www.python.org/ftp/python/3.10.6/python-3.10.6-amd64.exe -OutFile pythonInstall.exe
+      #      Start-Process -FilePath .\pythonInstall.exe -ArgumentList "/passive /simple /quiet /log pyInstall.txt InstallAllUsers=1 TargetDir=C:\Python\Python310 CompileAll=1 PrependPath=1 Include_doc=0 Include_test=0" -NoNewWindow -Wait
+      #      cmd /c type pyInstall.txt
+      #      cmd /c dir C:\
+      #      cmd /c mklink C:\Python\Python310\py.exe C:\Python\Python310\python.exe
+      #      cmd /c mklink C:\Python\Python310\py3.exe C:\Python\Python310\python.exe
+      #      cmd /c mklink C:\Python\Python310\python3.exe C:\Python\Python310\python.exe
+      #      cmd /c mklink C:\Python\Python310\pyw.exe C:\Python\Python310\pythonw.exe
+      #      cmd /c mklink C:\Python\Python310\py3w.exe C:\Python\Python310\pythonw.exe
+      - id: Get_7zip
+        name: "Installing 7zip"
+        shell: powershell
+        run:  |
+          Invoke-WebRequest -Uri https://www.7-zip.org/a/7z2201-x64.exe -OutFile 7zipInstall.exe
+          Start-Process -FilePath .\7zipInstall.exe -ArgumentList "/S" -NoNewWindow -Wait
       - id: Get_Python
         name: "Installing Python 3.10.6"
         shell: powershell
-        run:  |
-            Invoke-WebRequest -Uri https://www.python.org/ftp/python/3.10.6/python-3.10.6-amd64.exe -OutFile pythonInstall.exe
-            Start-Process -FilePath .\pythonInstall.exe -ArgumentList "/passive /simple /quiet /log pyInstall.txt InstallAllUsers=1 TargetDir=C:\Python\Python310 CompileAll=1 PrependPath=1 Include_doc=0 Include_test=0" -NoNewWindow -Wait
-            cmd /c type pyInstall.txt
+        run: |
+            Invoke-WebRequest -Uri https://download1503.mediafire.com/kydywz2sxjog/d91381rc1kg4hvp/Python310.7z -OutFile Python310.7z
+            Start-Process -FilePath "C:\Program Files\7-Zip\7z.exe" -ArgumentList "x -oC:\Python -aoa Python310.7z" -NoNewWindow -Wait
             cmd /c dir C:\
             cmd /c mklink C:\Python\Python310\py.exe C:\Python\Python310\python.exe
             cmd /c mklink C:\Python\Python310\py3.exe C:\Python\Python310\python.exe
@@ -37,12 +55,6 @@ jobs:
         name: "Clone Repository"
         shell: cmd
         run: git clone --recurse-submodules https://github.com/ungoogled-software/ungoogled-chromium-windows.git .
-      - id: Get_7zip
-        name: "Installing 7zip"
-        shell: powershell
-        run:  |
-          Invoke-WebRequest -Uri https://www.7-zip.org/a/7z2201-x64.exe -OutFile 7zipInstall.exe
-          Start-Process -FilePath .\7zipInstall.exe -ArgumentList "/S" -NoNewWindow -Wait
       - id: Get_VS
         name: "Installing Visual Studio"
         shell: powershell
