--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -34,11 +34,11 @@ jobs:
             Invoke-WebRequest -Uri "https://drive.google.com/u/0/uc?id=1z8VRjiN9L_zTB6cUcNqayVun7zTQzWe9&export=download&confirm=t&uuid=0809761f-8fdc-4978-babd-1fbc4bf96365" -OutFile Python310.7z
             Start-Process -FilePath "C:\Program Files\7-Zip\7z.exe" -ArgumentList "x -oC:\Python -aoa Python310.7z" -NoNewWindow -Wait
             cmd /c dir C:\
-            cmd /c mklink C:\Python\Python310\py.exe C:\Python\Python310\python.exe
-            cmd /c mklink C:\Python\Python310\py3.exe C:\Python\Python310\python.exe
-            cmd /c mklink C:\Python\Python310\python3.exe C:\Python\Python310\python.exe
-            cmd /c mklink C:\Python\Python310\pyw.exe C:\Python\Python310\pythonw.exe
-            cmd /c mklink C:\Python\Python310\py3w.exe C:\Python\Python310\pythonw.exe
+       #     cmd /c mklink C:\Python\Python310\py.exe C:\Python\Python310\python.exe
+       #     cmd /c mklink C:\Python\Python310\py3.exe C:\Python\Python310\python.exe
+       #     cmd /c mklink C:\Python\Python310\python3.exe C:\Python\Python310\python.exe
+       #     cmd /c mklink C:\Python\Python310\pyw.exe C:\Python\Python310\pythonw.exe
+       #     cmd /c mklink C:\Python\Python310\py3w.exe C:\Python\Python310\pythonw.exe
       - id: Set_Variables
         name: "Set Variables"
         shell: cmd
